[package]
name = "actix-signal-test"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies]
actix-signal = {path = "../actix-signal"}
actix-signal-derive = {path = "../actix-signal-derive"}
actix = "0.12"
actix-rt = "2.2"