[package]
name = "actix-signal-test"
version = "0.1.0"
authors = ["LightQuantum <self@lightquantum.me>"]
edition = "2018"
license = "MIT"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies]
actix-signal = { path = "../actix-signal" }
actix-signal-derive = { path = "../actix-signal-derive" }
actix = "0.13"
actix-rt = "2.2"