[package]
name = "actix-signal"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
# Provide derive(SignalHandler) macro
derive = ["actix-signal-derive"]

[dependencies]
actix = "0.12"
actix-signal-derive = {version="0.1", optional=true, path="../actix-signal-derive"}