[package]
name = "actix-signal"
version = "0.1.0"
authors = ["LightQuantum <self@lightquantum.me>"]
edition = "2018"
description = "Manage the lifecycle of an actix actor with its address."
license = "MIT"
keywords = ["actix", "actor", "lifecycle", "signal", "terminate"]
repository = "https://github.com/PhotonQuantum/actix-signal"
readme = "README.md"

[features]
# Provide derive(SignalHandler) macro
derive = ["actix-signal-derive"]

[dependencies]
actix = "0.13"
actix-signal-derive = { version = "0.1", optional = true, path = "../actix-signal-derive" }

[dev-dependencies]
actix-signal-derive = { version = "0.1", path = "../actix-signal-derive" }
actix-rt = "2.2"